Create auth and login form

--- a/auth-graphql-starter/client/index.html
+++ b/auth-graphql-starter/client/index.html
@@ -1,7 +1,19 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <style>
+    * {
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+
+    .form-title {
+      margin-top: 25vh;
+    }
+  </style>
 </head>
+
 <body>
   <div id="root" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
